removed jsr test from default build, integrated client jsr tests too