@@ -222,16 +222,13 @@
                         -Dhazelcast.mancenter.enabled=false
                         -Dhazelcast.logging.type=none
                         -Dhazelcast.test.use.network=false
-                        -Djavax.management.builder.initial=${javax.management.builder.initial}
-                        -DCacheManagerImpl=${CacheManagerImpl}
-                        -Djavax.cache.Cache=${CacheImpl}
-                        -Djavax.cache.Cache.Entry=${CacheEntryImpl}
-                        -Dorg.jsr107.tck.management.agentId=${org.jsr107.tck.management.agentId}
-                        -Djavax.cache.annotation.CacheInvocationContext=${javax.cache.annotation.CacheInvocationContext}
                     </argLine>
                     <includes>
                         <include>**/**.java</include>
                     </includes>
+                    <excludes>
+                        <exclude>**/jsr/**.java</exclude>
+                    </excludes>
                     <groups>com.hazelcast.test.annotation.QuickTest</groups>
                     <excludedGroups>
                         com.hazelcast.test.annotation.SlowTest,com.hazelcast.test.annotation.NightlyTest
@@ -281,6 +278,12 @@
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=none
                                 -Dhazelcast.test.use.network=false
+                                -Djavax.management.builder.initial=${javax.management.builder.initial}
+                                -DCacheManagerImpl=${CacheManagerImpl}
+                                -Djavax.cache.Cache=${CacheImpl}
+                                -Djavax.cache.Cache.Entry=${CacheEntryImpl}
+                                -Dorg.jsr107.tck.management.agentId=${org.jsr107.tck.management.agentId}
+                                -Djavax.cache.annotation.CacheInvocationContext=${javax.cache.annotation.CacheInvocationContext}
                             </argLine>
 
 
@@ -434,6 +437,12 @@
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=none
                                 -Dhazelcast.test.use.network=false
+                                -Djavax.management.builder.initial=${javax.management.builder.initial}
+                                -DCacheManagerImpl=${CacheManagerImpl}
+                                -Djavax.cache.Cache=${CacheImpl}
+                                -Djavax.cache.Cache.Entry=${CacheEntryImpl}
+                                -Dorg.jsr107.tck.management.agentId=${org.jsr107.tck.management.agentId}
+                                -Djavax.cache.annotation.CacheInvocationContext=${javax.cache.annotation.CacheInvocationContext}
                             </argLine>
 
                             <includes>
@@ -696,31 +705,6 @@
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=none
                                 -Dhazelcast.test.use.network=true
-                            </argLine>
-                            <groups>
-                                com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest,com.hazelcast.test.annotation.NightlyTest
-                            </groups>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>jre-1.6</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven.surefire.plugin.version}</version>
-                        <configuration combine.self="override">
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <argLine>
-                                -Xms128m -Xmx1G -XX:MaxPermSize=128M
-                                -Dhazelcast.version.check.enabled=false
-                                -Dhazelcast.mancenter.enabled=false
-                                -Dhazelcast.logging.type=none
-                                -Dhazelcast.test.use.network=false
                                 -Djavax.management.builder.initial=${javax.management.builder.initial}
                                 -DCacheManagerImpl=${CacheManagerImpl}
                                 -Djavax.cache.Cache=${CacheImpl}
@@ -728,16 +712,9 @@
                                 -Dorg.jsr107.tck.management.agentId=${org.jsr107.tck.management.agentId}
                                 -Djavax.cache.annotation.CacheInvocationContext=${javax.cache.annotation.CacheInvocationContext}
                             </argLine>
-                            <includes>
-                                <include>**/**.java</include>
-                            </includes>
-                            <excludes>
-                                <exclude>**/jsr/**.java</exclude>
-                            </excludes>
-                            <groups>com.hazelcast.test.annotation.QuickTest</groups>
-                            <excludedGroups>
-                                com.hazelcast.test.annotation.SlowTest,com.hazelcast.test.annotation.NightlyTest
-                            </excludedGroups>
+                            <groups>
+                                com.hazelcast.test.annotation.QuickTest,com.hazelcast.test.annotation.SlowTest,com.hazelcast.test.annotation.NightlyTest
+                            </groups>
                         </configuration>
                     </plugin>
                 </plugins>
